buttons facebook, github, gplus

--- a/stylus/atoms/buttons/facebook/index.styl
+++ b/stylus/atoms/buttons/facebook/index.styl
@@ -14,10 +14,13 @@
   atom-button()
   background #4c66a4
   color #FFF
-  font-family Hevletica
+  font-size 18px
+  font-family helvetica
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
 .atom-button-facebook:before
   content '\e600'
   font-family facebook
-  margin .2em
+  margin 0 5px
   vertical-align baseline
