buttons and inputs, styles

--- a/stylus/atoms/inputs/index.styl
+++ b/stylus/atoms/inputs/index.styl
@@ -5,6 +5,7 @@ atom-input()
   border 1px solid #CCCCCC
   box-shadow inset 1px 1px 5px rgba(0,0,0, 0.1)
   box-sizing border-box
-  font-size 16px
+  font-size 14px
   font-weight lighter
   font-family helvetica
+  color #555555
