--- a/stylus/atoms/index.styl
+++ b/stylus/atoms/index.styl
@@ -10,6 +10,7 @@ atom-size(height, width = 100%, min-width = 30%)
   min-width min-width
   height height
 
+// change name for the cientific term
 atom-create(bg, pad = 0, height = 0, width = 100%, min-width = 30%)
   atom-structure(pad)
   atom-size(height, width, min-width)
